fix: SellerOrderViewController 주문 상태 필터링 및 권한 관련 수정
- SellerOrderViewController에 Collectors import 추가
- 주문 상태 필터링 시 불변 List 대신 가변 List 반환 (toList() -> collect(Collectors.toList()))
- 판매자 가게 조회 결과 로깅 추가
- seller/order-list.html 주문 상태 필터를 order-adminlist.html과 동일하게 변경
  - 상태 값을 한글에서 영문 enum 값으로 통일 (PENDING, COMPLETED, PROCESSING, SHIPPED, DELIVERED, CANCELLED, FAILED)
  - 상태 배지 CSS 클래스명 업데이트
- OrderDetailViewController에 판매자(SELLER) 권한 추가
- order/detail.html에 isSeller 속성 추가
- header.html 판매자 메뉴 텍스트 개선
- CSS 파일 미세 조정

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>